--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -137,7 +137,7 @@
         <div class="footer-content">
             <div class="footer-col">
                 <h4>关于冰书</h4>
-                <p style="line-height: 1.8;">冰书 (BingBook) 致力于为读者提供高价值的信息筛选服务，在信息过载的时代，保持冷静与深度。</p>
+                <p style="line-height: 1.8;">冰书 (BingBook.cn) 致力于为读者提供高价值的信息筛选服务，在信息过载的时代，保持冷静与深度。</p>
             </div>
             <div class="footer-col">
                 <h4>栏目导航</h4>
@@ -171,7 +171,7 @@
             </div>
         </div>
         <div class="copyright">
-            &copy; {{ site.time | date: "%Y" }} BingBook. Powered by GitHub Pages.
+            &copy; {{ site.time | date: "%Y" }} BingBook.
         </div>
     </footer>
 
