--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -139,15 +139,17 @@
                 <h4>关于冰书</h4>
                 <p style="line-height: 1.8;">冰书 (BingBook.cn) 致力于为读者提供高价值的信息筛选服务，在信息过载的时代，保持冷静与深度。</p>
             </div>
-            <div class="footer-col">
-                <h4>栏目导航</h4>
-                <ul>
-                    <li><a href="#">全球视野</a></li>
-                    <li><a href="#">深度报道</a></li>
-                    <li><a href="#">书评专栏</a></li>
-                    <li><a href="#">播客精选</a></li>
-                </ul>
-            </div>
+            <!-- 栏目导航 -->
+           <div class="footer-col">
+              <h4>栏目导航</h4>
+            <ul>
+    
+            <li><a href="{{ site.baseurl }}/global/">全球视野</a></li>
+            <li><a href="{{ site.baseurl }}/depth/">深度报道</a></li>
+            <li><a href="{{ site.baseurl }}/books/">书评专栏</a></li>
+            <li><a href="{{ site.baseurl }}/podcast/">播客精选</a></li>
+           </ul>
+           </div>
             
            <div class="footer-col">
                 <h4>联系与合作</h4>
