--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -209,7 +209,7 @@
             </div>
         </div>
         <div class="copyright">
-            &copy; {{ site.time | date: "%Y" }} BingBook. Powered by GitHub Pages.
+            &copy; {{ site.time | date: "%Y" }} 冰书BingBook.cn.
         </div>
     </footer>
 
