--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -222,7 +222,7 @@
                     <!-- style 里的 background: white 是为了防止二维码在黑底上看不清 -->
                     <img src="{{ site.baseurl }}/img/qrcode.png" alt="公众号" 
                          style="width: 80px; height: 80px; border-radius: 4px; background: #fff; padding: 4px;"
-                         onerror="this.src='https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=BingBook'"> 
+                         onerror="this.src='/img/qrcode.png'"> 
                     
                     <div style="flex: 1;">
                         <h5 style="color: #fff; margin: 0 0 5px 0; font-size: 14px;">关注官方公众号</h5>
