--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -160,7 +160,7 @@
                     <div id="search-results"></div>
                 </div>
                 <!-- 顶部订阅按钮 -->
-                <a href="#subscribe-section" class="btn-subscribe">订阅日报</a>
+                <a href="#subscribe-section" class="btn-subscribe">订阅</a>
             </div>
         </div>
     </header>
