--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -144,7 +144,7 @@
         <div class="header-inner">
             <a href="{{ site.baseurl }}/" class="brand-area">
                 <!-- Logo: 请确保 /img/logo.png 存在 -->
-                <img src="https://bingbook.cn/img/logo.png" alt="BingBook" class="logo-img" onerror="this.style.display='none'">
+                <img src="/img/logo.png" alt="BingBook" class="logo-img" onerror="this.style.display='none'">
                 <span class="brand-text">冰书</span>
             </a>
             <nav class="nav-links">
