--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -225,7 +225,7 @@
             </div>
         </div>
         <div class="copyright">
-            &copy; {{ site.time | date: "%Y" } 冰书Bingbook.cn .
+            &copy; {{ site.time | date: "%Y" }} 冰书Bingbook.cn .
         </div>
     </footer>
 
