--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,46 @@
     <link rel="icon" href="{{ site.baseurl }}/img/logo.png" type="image/png">
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/logo.png">
 
-    <!-- === 核心：引入 Google Fonts (免费商用) === -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- 引入 Noto Sans SC (黑体) 和 Noto Serif SC (宋体) -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
+        /* === 核心本地字体定义 (TTF) === */
+        
+        /* 1. 思源黑体 (常规) */
+        @font-face {
+            font-family: 'Noto Sans SC';
+            src: url('{{ site.baseurl }}/fonts/sans-regular.ttf') format('truetype');
+            font-weight: 400;
+            font-style: normal;
+            font-display: swap;
+        }
+        
+        /* 2. 思源黑体 (粗体) */
+        @font-face {
+            font-family: 'Noto Sans SC';
+            src: url('{{ site.baseurl }}/fonts/sans-bold.ttf') format('truetype');
+            font-weight: 700;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        /* 3. 思源宋体 (常规) */
+        @font-face {
+            font-family: 'Noto Serif SC';
+            src: url('{{ site.baseurl }}/fonts/serif-regular.ttf') format('truetype');
+            font-weight: 400;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        /* 4. 思源宋体 (粗体) */
+        @font-face {
+            font-family: 'Noto Serif SC';
+            src: url('{{ site.baseurl }}/fonts/serif-bold.ttf') format('truetype');
+            font-weight: 700;
+            font-style: normal;
+            font-display: swap;
+        }
+
         /* --- 1. 全局设计系统 --- */
         :root {
             --brand-primary: #0056b3; 
